changes in about page

--- a/SweeTron/SweeTron/SweeTron/Views/Home/About.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/About.cshtml
@@ -4,7 +4,15 @@
 
 <section id="app">
     <img class="backgroung" src="/images/backSweetron.jpg" alt="" style="width:1700px;height:650px;" align="left" />
-    <div class="container" style="margin-top: -331px; height: 750px; padding-top: 52.96px; padding-bottom: 52.96px;">
+    
+    <style>
+
+
+
+    </style>
+    
+    
+    <div class="top" style="margin-top: -331px; height: 750px; padding-top: 52.96px; padding-bottom: 52.96px;">
 
         <div class="row">
             <div class="text-wrapper" style="height: 350px; width: 700px;">
