adaptacao ao sobre nos

--- a/SweeTron/SweeTron/SweeTron/Views/Home/About.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/About.cshtml
@@ -4,9 +4,9 @@
 
 <link rel="stylesheet" href="~/css/site.css" />
 
-<div class="text-wrapper" style="height: 350px; width: 2000px;">
+<div class="text-wrapper" style="height:400px; width:3000px;">
 
-    <img src="/images/backSweetron.jpg" alt="" />
+    <img src="/images/backSweetron2.jpg" alt=""/>
 
     <div class="title">
         <!--Vai mostrar o titulo-->
