view menu util/admin add

--- a/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
@@ -20,6 +20,8 @@
             </div>
 
             <button type="submit" class="float">Login</button>
+            @Html.ActionLink("Registar", "Create", "Utilizador")
+
         </form>
     </div>
 </div>
