--- a/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
@@ -1,63 +1,19 @@
-﻿@model IEnumerable<SweeTron.Models.Utilizador>
-
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "Sweetron";
 }
 
-<h2>Index</h2>
+<link rel="stylesheet" href="~/css/site.css" type="text/css"/>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Data_Nascimento)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Admin)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Username)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Data_Nascimento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Admin)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Username)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID_Utilizador }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID_Utilizador }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID_Utilizador })
-        </td>
-    </tr>
-}
-
-</table>
+<body>
+    <div style="width:150px; margin:0 auto;">
+            <div class="btn-group-vertical">
+                <button style="margin-top:8px" type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Cozinhar Receita", "", "Utilizador")</button>
+                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Favoritos", "", "Utilizador")</button>
+                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Histórico", "", "Utilizador")</button>
+                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Filtro", "", "Utilizador")</button>
+                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Plano Semanal", "", "Utilizador")</button>
+                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Avaliar Receita", "", "Utilizador")</button>
+                <button type="button" class="btn btn-danger btn-lg bt">@Html.ActionLink("Terminar Sessão", "", "Utilizador")</button>
+            </div>
+    </div>
+</body>
