botoes a funcionar melhor

--- a/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
@@ -19,9 +19,8 @@
                 <input type="password" class="form-control" placeholder="Password">
             </div>
 
-            <button type="submit" class="float">Login</button>
-            @Html.ActionLink("Registar", "Create", "Utilizador")
-
+            <button type="submit" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Login</button>
+            <button type="button" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Utilizador/Create'">Registar</button>
         </form>
     </div>
 </div>
