--- a/SweeTron/SweeTron/SweeTron/Views/Receita/Create.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Receita/Create.cshtml
@@ -39,38 +39,32 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Preparacao, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <b>1ºPasso</b>
-            @Html.EditorFor(model => model.Preparacao, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Preparacao, "", new { @class = "text-danger" })
-            <span class="glyphicon">&#xe081;</span>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Preparacao, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <b>1ºPasso</b>
+                @Html.EditorFor(model => model.Preparacao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Preparacao, "", new { @class = "text-danger" })
+                <button type="button" class="glyphicon" onclick="window.location.href='/Passos/Create'"> &#xe081 </button>
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Video, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Video, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Video, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+
+            @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
+            <form action="/action_page.php">
+                <input type="file" name="pic" accept="image/*">
+            </form>
         </div>
-    </div>
-
-    <div class="form-group">
-
-        @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
-        <form action="/action_page.php">
-            <input type="file" name="pic" accept="image/*">
-        </form>
-    </div>
 
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
         </div>
-    </div>
 </div>
 }
 
