--- a/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
@@ -6,14 +6,14 @@
 
 <body>
     <div style="width:150px; margin:0 auto;">
-            <div class="btn-group-vertical">
-                <button style="margin-top:8px" type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Cozinhar Receita", "", "Utilizador")</button>
-                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Favoritos", "", "Utilizador")</button>
-                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Histórico", "", "Utilizador")</button>
-                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Filtro", "", "Utilizador")</button>
-                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Plano Semanal", "", "Utilizador")</button>
-                <button type="button" class="btn btn-secundary btn-lg bt">@Html.ActionLink("Avaliar Receita", "", "Utilizador")</button>
-                <button type="button" class="btn btn-danger btn-lg bt">@Html.ActionLink("Terminar Sessão", "", "Utilizador")</button>
-            </div>
+        <div class="btn-group-vertical">
+            <button style="margin-top:8px" type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Cozinhar Receita</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Favoritos</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Histórico</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Filtro</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Plano Semanal</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Avaliar Receita</button>
+            <button type="button" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Home/Index'" >Terminar Sessão</button>
+        </div>
     </div>
 </body>
