mudancas na sobre nos e contacte-nos

--- a/SweeTron/SweeTron/SweeTron/Views/Home/About.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/About.cshtml
@@ -17,31 +17,21 @@
                 Face à crescente exigência do consumidor pelas mais variadas opções alimentares que respondam e satisfaçam as suas necessidades
                 e numa sociedade cada vez mais manipulada pelo tempo. Foi com esta linha de pensamento que a empresa <strong>MobileForAll</strong> criou em parceria com o
                 Chef Hernâni Ermida e os supermercados Lidl, a <strong>SweeTron</strong>, uma aplicação preparada para proporcionar ao consumidor uma nova experiência culinária.
-                Neste sentido são simplificadas as frequentes indecisões do consumidor ao facultar-lhe os níveis de dificuldade, o tempo despendido e vídeo aulas das
-                receitas culinárias (sobremesa), de modo a esclarecer quaisquer dúvidas na conceção das mesmas. São também proporcionadas sugestões para cada dia da semana,
-                localizações de superfícies de venda a retalho e identificação dos produtos necessários à conceção da receita escolhida.
             </p>
         </div>
     </div>
 
     <div class="mobile4all" style="height:400px; width:3000px;">
+            <div class="title-mobile">
+                <!--Vai mostrar o titulo-->
+                <h2 style="text-align:center;">MobileForAll</h2>
+            </div>
 
-        <div class="title-mobile">
-            <!--Vai mostrar o titulo-->
-            <h2 style="text-align:center;">MobileForAll</h2>
-        </div>
-
-        <div class="texto-mobile">
-            <!--Texto descritivo para h2-->
-            <p>
-                Face à crescente exigência do consumidor pelas mais variadas opções alimentares que respondam e satisfaçam as suas necessidades
-                e numa sociedade cada vez mais manipulada pelo tempo. Foi com esta linha de pensamento que a empresa <strong>MobileForAll</strong> criou em parceria com o
-                Chef Hernâni Ermida e os supermercados Lidl, a <strong>SweeTron</strong>, uma aplicação preparada para proporcionar ao consumidor uma nova experiência culinária.
-                Neste sentido são simplificadas as frequentes indecisões do consumidor ao facultar-lhe os níveis de dificuldade, o tempo despendido e vídeo aulas das
-                receitas culinárias (sobremesa), de modo a esclarecer quaisquer dúvidas na conceção das mesmas. São também proporcionadas sugestões para cada dia da semana,
-                localizações de superfícies de venda a retalho e identificação dos produtos necessários à conceção da receita escolhida.
-            </p>
-        </div>
-
-
+            <div class="texto-mobile">
+                <!--Texto descritivo para h2-->
+                <p>
+                    MobileForAll é uma empresa sediada na <a href="https://www.startupbraga.com/" style="color:white">Startup Braga</a>, 
+                    conhecida pela sua capacidade de inovação e empreendedorismo. Sempre em busca de melhorar o amanhã e de inovar o presente.
+                </p>
+            </div>
     </div>
