--- a/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
@@ -5,6 +5,11 @@
 <link rel="stylesheet" href="~/css/HomePage.css" />
 
 <div class="login">
+    
+    <div class="logo">
+        <img src="/images/logoSweeTron.png" alt="" style="min-width: 100%; min-height: 120%;">
+    </div>
+    
     <div class="heading">
         <h2>Sign in</h2>
         <form action="#">
