--- a/SweeTron/SweeTron/SweeTron/Views/Shared/_Layout.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
+
+<link rel="stylesheet" href="~/css/site.css" />
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +32,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer id="footer">
             <p>&copy; @DateTime.Now.Year -MobileForAll</p>
         </footer>
     </div>
