--- a/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/Index.cshtml
@@ -1,36 +1,50 @@
-﻿@{
+﻿@model SweeTron.Models.Utilizador
+@{
     ViewBag.Title = "Home Page";
 }
 
 <link rel="stylesheet" href="~/css/HomePage.css" />
 
 <div class="login">
-    
+
     <div class="logo">
         <img src="/images/logoSweeTron.png" alt="" style="min-width: 100%; min-height: 120%;">
     </div>
-    
-    <div class="heading">
-        <h2>Sign in</h2>
-        <form action="#">
 
-            <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control" placeholder="Username or email">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <div class="heading">
+            <h2>Sign in</h2>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="input-group input-group-lg">
+                    <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
 
-            <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                <input type="password" class="form-control" placeholder="Password">
+            <div class="form-group">
+                <div class="input-group input-group-lg">
+                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
 
-            <button type="submit" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Login</button>
+            <button type="submit" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Home'">Login</button>
             <button type="button" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Utilizador/Create'">Registar</button>
-        </form>
-    </div>
-</div>
+        </div>
+}
 
-
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 
 
 
