--- a/SweeTron/SweeTron/SweeTron/css/site.css
+++ b/SweeTron/SweeTron/SweeTron/css/site.css
@@ -83,22 +83,6 @@ div .mobile4all {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*Responsvel pela formatação para mobile*/
 @media screen and (max-width: 400px) {
     div .text-wrapper {
@@ -163,4 +147,29 @@ div .mobile4all {
     text-align: left;
     font-size: 19px;
     font-weight: lighter;
+}
+
+
+
+/*CSS para a pagina Index dos users*/
+
+.btn-group-vertical {
+    width: 200px;
+    height: 300px;
+    margin-top: 35px;
+    margin-left: -600px;
+}
+
+body {
+    background-position: top;
+    background-size: cover;
+    background-image: url("/images/folhados.jpg");
+    min-height: 100%;
+    min-width: 100%;
+    background-repeat: no-repeat;
+}
+
+.form-group{
+    margin-left: 300px;
+    margin-top: -300px;
 }
