--- a/SweeTron/SweeTron/SweeTron/Views/Receita/Details.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Receita/Details.cshtml
@@ -54,21 +54,31 @@
             @Html.DisplayNameFor(model => model.Video)
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Video)
-        </dd>
+        <a href="@Html.DisplayFor(model=> model.Video)"
+           target="_blank">Link para o YouTube</a>
 
         <dt>
             @Html.DisplayNameFor(model => model.Foto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Foto)
+            <img src="
+            @Html.DisplayFor(model => model.Foto)" width="100" height="50" />
         </dd>
+        
+        <dd><h6>Ingredientes:</h6></dd>
+
+        @foreach(var ingrediente in ViewBag.Ingredientes)
+        {
+            <dd>
+                @(ingrediente.Value) @(ingrediente.Key.Nome)
+            </dd>
+
+        }
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID_Receita }) |
+    @Html.ActionLink("Iniciar confeção","Details","Passos",new { id = ViewBag.ids_passos[0], array = String.Join("-", ViewBag.ids_passos)}, null)
     @Html.ActionLink("Back to List", "Index")
 </p>
