--- a/SweeTron/SweeTron/SweeTron/Views/Utilizador/Create.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Utilizador/Create.cshtml
@@ -81,7 +81,7 @@
 }
 
 <div class="cancelar">
-    @Html.ActionLink("Cancelar", "Index")
+    @Html.ActionLink("Cancelar", "Index", "Home")
 </div>
 
 @section Scripts {
