--- a/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
@@ -2,46 +2,18 @@
     ViewBag.Title = "Sweetron";
 }
 
-<link rel="stylesheet" href="~/css/site.css" type="text/css" />
+<link rel="stylesheet" href="~/css/site.css" type="text/css"/>
 
 <body>
-    <div style="width:200px; margin:0 auto;">
+    <div style="width:150px; margin:0 auto;">
         <div class="btn-group-vertical">
-            <button type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Cozinhar Receita</button>
-            <button type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Favoritos</button>
-            <button type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Histórico</button>
-            <button type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Filtro</button>
-            <button type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Plano Semanal</button>
-            <button onclick="apareceLista()" type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Avaliar Receita</button>
-            <button type="button" style="margin: 5px 5px 5px 5px; background-color: black; color: white; font-weight: lighter;" class="btn btn-primary" onclick="window.location.href='/Home/Index'">Terminar Sessão</button>
+            <button style="margin-top:8px" type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Receita/Index'">Cozinhar Receita</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Favoritos</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Histórico</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Filtro</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Plano Semanal</button>
+            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Avaliar Receita</button>
+            <button type="button" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Home/Index'" >Terminar Sessão</button>
         </div>
     </div>
-
-    <div class="form-group" id="lista" style="display:none;">
-        <label for="exampleSelect1">Avaliação da receita</label>
-        <select class="form-control" id="exampleSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
-    </div>
-
-
-    <script>
-        function apareceLista() {
-            var x = document.getElementById("lista");
-            if (x.style.display === "none") {
-                x.style.display = "block";
-            } else {
-                x.style.display = "none";
-            }
-        }
-
-
-    </script>
-
-
-
 </body>
