modificacoes na view do index do user

--- a/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
@@ -6,14 +6,54 @@
 
 <body>
     <div style="width:150px; margin:0 auto;">
-        <div class="btn-group-vertical">
-            <button style="margin-top:8px" type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Receita/Index'">Cozinhar Receita</button>
-            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Favoritos</button>
-            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Histórico</button>
-            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Filtro</button>
-            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Plano Semanal</button>
-            <button type="button" class="btn btn-secundary btn-lg bt" onclick="window.location.href='/Utilizador/Index'">Avaliar Receita</button>
-            <button type="button" class="btn btn-danger btn-lg bt" onclick="window.location.href='/Home/Index'" >Terminar Sessão</button>
+        <div class="btn-group-vertical" style="color: black; font-weight: lighter;">
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Receita/Index'">Cozinhar Receita</button>
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Favoritos</button>
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Histórico</button>
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Filtro</button>
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Plano Semanal</button>
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Utilizador/Index'">Avaliar Receita</button>
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/Home/Index'" >Terminar Sessão</button>
         </div>
     </div>
+
+
+
+    <div class="plano_semanal">
+        <tbody>
+            <h3 style="font-weight:lighter; color: black;">Plano Semanal</h3>
+            <tr class="table-dark">
+                <th scope="row">Segunda</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+            </br>
+            <tr class="table-dark">
+                <th scope="row">Segunda</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+            </br>
+            <tr class="table-dark">
+                <th scope="row">Segunda</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+            </br>
+            <tr class="table-dark">
+                <th scope="row">Segunda</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+            </br>
+            <tr class="table-dark">
+                <th scope="row">Segunda</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+            </br>
+            <tr class="table-dark">
+                <th scope="row">Segunda</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+        </tbody>
+
+    </div>
+
+
 </body>
