--- a/SweeTron/SweeTron/SweeTron/Views/Passos/Details.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Passos/Details.cshtml
@@ -22,7 +22,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Video)
+            
+            <iframe src="" width="560" height="315" frameborder="0" allowfullscreen></iframe>
         </dd>
 
 
