--- a/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Utilizador/Index.cshtml
@@ -28,27 +28,32 @@
             </tr>
             </br>
             <tr class="table-dark">
-                <th scope="row">Segunda</th>
+                <th scope="row">Terça</th>
                 <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
             </tr>
             </br>
             <tr class="table-dark">
-                <th scope="row">Segunda</th>
+                <th scope="row">Quarta</th>
                 <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
             </tr>
             </br>
             <tr class="table-dark">
-                <th scope="row">Segunda</th>
+                <th scope="row">Quinta</th>
                 <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
             </tr>
             </br>
             <tr class="table-dark">
-                <th scope="row">Segunda</th>
+                <th scope="row">Sexta</th>
                 <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
             </tr>
             </br>
             <tr class="table-dark">
-                <th scope="row">Segunda</th>
+                <th scope="row">Sábado</th>
+                <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
+            </tr>
+            </br>
+            <tr class="table-dark">
+                <th scope="row">Domingo</th>
                 <td>@Html.ActionLink("Nome da Receita", "www.google.pt")</td>
             </tr>
         </tbody>
